--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "hello.js",
   "private": true,
   "dependencies": {
-    "bindings": "~1.2.1",
-    "node-addon-api": "^1.0.0"
+    "bindings": "~1.2.1"
   },
   "scripts": {
     "test": "node hello.js"
