--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hello_world",
-  "version": "0.0.0",
+  "name": "kr-node-addon",
+  "version": "1.0.0",
   "description": "Node.js Addons Example #1",
   "main": "index.js",
   "private": true,
