--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "kr-node-addon",
-  "version": "1.0.0",
+  "name": "hello_world",
+  "version": "0.0.0",
   "description": "Node.js Addons Example #1",
-  "main": "index.js",
+  "main": "hello.js",
   "private": true,
   "dependencies": {
-    "bindings": "~1.2.1"
+    "bindings": "~1.2.1",
+    "node-addon-api": "^1.0.0"
   },
   "scripts": {
-    "test": "node index.js"
+    "test": "node hello.js"
   },
   "gypfile": true
 }
